# Silica

./: LICENSE  README.md  on_push_main.yml
.github/workflows/: action.yml  on_push_main.yml
StartingUnits/: StartingUnits.cs  StartingUnits.csproj  StartingUnits.sln
ranked/: inserting_info.py  parser_ranked.py  requirements.txt  revised_schema.txt  schema.prisma  small_test_file  tier_one_structures.txt  tier_one_units.txt  tier_three_structures.txt  tier_three_units.txt  tier_two_structures.txt  tier_two_units.txt
ranked/leaderboard_discord/: Cargo.toml
ranked/leaderboard_discord/src/: main.rs  update_sheets.rs
ranked/old_python_version/: parser_ranked.py  tier_three_structures.txt  tier_two_structures.txt
ranked/parser/: Cargo.toml  schema.prisma
ranked/parser/src/: inserting_info.rs  lib.rs  main.rs  parser.rs
