[package]
name = "leaderboard_discord"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_xlsxwriter = { version = "0.64.2", features = ["serde"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres" ] }
serde = "1.0.203"
dotenv = "0.15.0"
tokio-stream = "0.1.15"
futures = "0.3.30"
calamine = "0.25.0"
google-sheets4 = "5.0.5"
