[package]
name = "parser"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
regex = "1.10.5"
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres"] }
serde = "1.0.203"
dotenv = "0.15.0"
tokio-stream = "0.1.15"
futures = "0.3.30"
libc = "0.2.155"
