[package]
name = "parser"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
regex = "1.10.5"
tokio = { version = "1.38.0", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-rustls", "postgres"] }
dotenv = "0.15.0"
futures = "0.3.30"
winapi = { version = "0.3.9", features = ["handleapi", "winbase", "processenv"] }
rev_lines = "0.3.0"

[profile.release]
debug = true
#debug = 2
